fix width container/overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 .container{
     padding-block: 10vh;
     height: 100vh;
-    width: 90vw;
+    width: 100%;
     margin: 0 auto;
     height: 90vh;
     display: flex;
@@ -20,6 +20,7 @@ body{
     flex-wrap: wrap;
     gap: 20px;
     position: relative;
+    overflow: auto;
 }
 
 
